Update navbar to show first name dynamically

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -10,7 +10,7 @@
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                 </li>
-                <% if (locals.user) { %>
+                <% if (user) { %>
                     <li class="nav-item">
                         <a class="nav-link" href="/blog/add-new">Add Blog</a>
                     </li>
@@ -18,25 +18,25 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
-                            Yashita
+                            <%= user.fullName.split(" ")[0] %>
                         </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="/user/logout">Logout</a></li>
-                        </ul>
-                    </li>
-
-                    <% } else { %>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/user/signup">Create Account</a>
-                        </li>
-
-                        <li class="nav-item">
-                            <a class="nav-link" href="/user/login">Login</a>
-                        </li>
-                        <% } %>
-
-
+                        <ul class=" dropdown-menu">
+                    <li><a class="dropdown-item" href="/user/logout">Logout</a></li>
             </ul>
+            </li>
+
+            <% } else { %>
+                <li class="nav-item">
+                    <a class="nav-link" href="/user/signup">Create Account</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="/user/login">Login</a>
+                </li>
+                <% } %>
+
+
+                    </ul>
         </div>
     </div>
 </nav>
