--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -15,28 +15,30 @@
                         <a class="nav-link" href="/blog/add-new">Add Blog</a>
                     </li>
 
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">
-                            <%= user.fullName.split(" ")[0] %>
+                    <% if (user.fullName) { %>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                <%= user.fullName.split(" ")[0] %>
                         </a>
                         <ul class=" dropdown-menu">
-                    <li><a class="dropdown-item" href="/user/logout">Logout</a></li>
+                        <li><a class="dropdown-item" href="/user/logout">Logout</a></li>
             </ul>
             </li>
+            <% } %>
 
-            <% } else { %>
-                <li class="nav-item">
-                    <a class="nav-link" href="/user/signup">Create Account</a>
-                </li>
+                <% } else { %>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/user/signup">Create Account</a>
+                    </li>
 
-                <li class="nav-item">
-                    <a class="nav-link" href="/user/login">Login</a>
-                </li>
-                <% } %>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/user/login">Login</a>
+                    </li>
+                    <% } %>
 
 
-                    </ul>
+                        </ul>
         </div>
     </div>
 </nav>
