--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -15,30 +15,28 @@
                         <a class="nav-link" href="/blog/add-new">Add Blog</a>
                     </li>
 
-                    <% if (user.fullName) { %>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
-                                <%= user.fullName.split(" ")[0] %>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            <%= user.fullName %>
                         </a>
                         <ul class=" dropdown-menu">
-                        <li><a class="dropdown-item" href="/user/logout">Logout</a></li>
-            </ul>
-            </li>
-            <% } %>
-
-                <% } else { %>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/user/signup">Create Account</a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link" href="/user/login">Login</a>
-                    </li>
-                    <% } %>
-
-
+                            <li><a class="dropdown-item" href="/user/logout">Logout</a></li>
                         </ul>
+                    </li>
+
+                    <% } else { %>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/user/signup">Create Account</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" href="/user/login">Login</a>
+                        </li>
+                        <% } %>
+
+
+            </ul>
         </div>
     </div>
 </nav>
